# rust-dsql

./: Cargo.toml  HISTORY.md  README.md
.cursor/rules/: never-drop-tables.mdc
src/: auth.rs  main.rs
