[package]
name = "rust-dsql"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
percent-encoding = "2.3.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
# AWS SDK dependencies for auth token generation
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dsql = "1.11.0"
clap = { version = "4.4.18", features = ["derive"] }
dialoguer = "0.11.0"
# Required for the example code
anyhow = "1.0.79"
